Issue 616: moved tests to use OpenJDK and better java args